bdr.BDR2.scala.code
readMessage() match {
  case "R" => right();forward()
  case "L" => left();forward()
  case "I"=> back();forward()
  case "A"=> forward()
  case "B" =>forward();forward()
  case "C"=>forward();forward();forward()
  case "D"=>forward;forward();forward();forward()
  case "E"=>forward;forward();forward();forward();forward()
  case "F"=>forward;forward();forward();forward();forward();forward()
  case "Z"=> backward()
  case "Y"=> backward();backward()
  case "X"=> backward();backward();backward()
  case "W"=> backward();backward();backward();backward()
  case "V"=> backward();backward();backward();backward();backward()
  case "U"=> backward();backward();backward();backward();backward();backward()